--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <label for="frequency-input">Frequency (minutes)</label>
                                 <input class="form-control" id="frequency-input" placeholder="30" type="text">
                               </div>
-                              <button class="btn btn-primary float-right" id="add-employee-btn">Submit</button>
+                              <button class="btn btn-primary float-right" id="add-train-btn">Submit</button>
                         </form>
                     </div>
                 </div>
