--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                                     <th scope="col">Minutes Away</th>
                                 </tr>
                             </thead>
+                            <tbody>
+                            </tbody>
                         </table>
                     </div>
                 </div>
